# video-quality-analysis

./: .gitignore  Dockerfile  LICENSE  README.md
amg_video_freeze/inc/: amg_video_black_detect.h  amg_video_black_detect_algo.h  amg_video_black_detect_fsm.h  amg_video_black_detect_slice_algo.h  amg_video_common.h  amg_video_freeze_detect.h  amg_video_freeze_detect_algo.h  amg_video_freeze_detect_fsm.h  amg_video_state_detect.h
amg_video_freeze/src/: amg_video_black_detect_algo.c  amg_video_freeze_detect.c  amg_video_freeze_detect_fsm.c  amg_video_state_detect.c
amg_video_freeze/ut/: CMakeLists.txt  amg_video_black_detect_slice_algo_ut.c  black_algo_detect.sh  black_detect.sh  build.sh  freeze_detect.sh  freeze_detect_fsm.sh
inc/: amg_error_detector_common.h  amg_video_black_detect.h  amg_video_black_detect_algo.h  amg_video_black_detect_fsm.h  amg_video_black_detect_slice_algo.h  amg_video_common.h  amg_video_freeze_detect.h  amg_video_freeze_detect_algo.h  amg_video_freeze_detect_fsm.h  ipp.h
src/: amg_video_black_detect.c  amg_video_black_detect_fsm.c  amg_video_black_detect_slice_algo.c  amg_video_freeze_detect_algo.c  ipp_enhanced.c
ut/: CMakeLists.txt  amg_video_black_detect_algo_ut.c  amg_video_black_detect_slice_algo_ut.c  amg_video_black_detect_ut_fsm.c  amg_video_freeze_detect_ut_fsm.c  amg_video_state_detect_ut.c  black_algo_detect.sh  black_detect.sh  black_slice_algo_detect.sh  detect.sh  freeze_detect_fsm.sh  set_params.sh  state_detect.sh
ut/test/: black.ts  black_test.ts
